84-uiImprovements placeholder font color fixed in firefox and made alignment correct in about page
[X] 84-uiImprovements fixes with the responsive of navigation menu

[X] 84-uiImprovements managing space between selectors in chart wrap

--- a/resources/assets/css/custom/pages/search-page.scss
+++ b/resources/assets/css/custom/pages/search-page.scss
@@ -258,7 +258,7 @@
   }
 }
 
-@media (max-width: 768px){
+@media (max-width: 1270px){
 
   .top-bar-right .menu{
     padding-right: 0;
@@ -270,7 +270,7 @@
   #main-menu{
     position: static;
     .search{
-      right: 40px;
+      right: 150px;
       top: 2px;
       &.open{
         right: 0;
